# rag_papers_by_AI

./: .gitignore  README.md  README.zh-CN.md  TODO.txt  docker-compose.postgres.yml  pyproject.toml  requirements.txt
ArXiv_craw/: crawer.py  pyproject.toml
backend/: assistant_memory.py  config_store.py  ingest_manager.py  live2d_service.py  main.py  schemas.py
config/: runtime_settings.example.json
frontend/: index.html  package-lock.json  package.json
frontend/public/live2d/model/AnAn夏目安安 - Mandou/: AnAn - model.moc3  AnAn - model.model3.json  AnAn - model.physics3.json  Live2DModelreadme.txt  abb.exp3.json  angry.exp3.json  armL06.exp3.json  armLup.exp3.json  down.exp3.json  exp1.exp3.json  idle1.motion3.json  items_pinned_to_model.json  namida.exp3.json  note.exp3.json  notebig.exp3.json  notelily.exp3.json  pale01.exp3.json  pale02.exp3.json  shy.exp3.json  shy2.exp3.json  sur1.exp3.json  sweat.exp3.json  think.exp3.json  writenote.exp3.json
frontend/src/: App.jsx  Live2DAssistant.jsx  styles.css
local_paper_db/app/: __init__.py  external_sources.py  in.py  search.py  search_service.py
