[project]
name = "arxiv-paper-rag"
version = "0.1.0"
description = "Local arXiv paper crawling, vector ingestion, and RAG search with PostgreSQL, pgvector, Ollama, and API reranking."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "edge-tts>=7.2.3",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "uvicorn>=0.34.0",
]
